--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,6 +13,13 @@ jobs:
       fail-fast: false
       matrix:
         goVersion: [1.21.x]
+    services:
+      redis:
+        image: redis/redis-stack-server:edge
+        options: >-
+          --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
+        ports:
+          - 6379:6379
     steps:
       - name: Checkout
         uses: actions/checkout@v2
