--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,7 +15,7 @@ jobs:
         goVersion: [1.21.x]
     services:
       redis:
-        image: redis/redis-stack-server:edge
+        image: redis/redis-stack-server
         options: >-
           --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
         ports:
