--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,18 +9,23 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+
     strategy:
       fail-fast: false
       matrix:
         goVersion: [1.21.x]
-    services:
-      redis:
-        image: redis/redis-stack-server:latest
-        options: >-
-          --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
-        ports:
-          - 6379:6379
+        redis:
+          - '6.2'
+          - '6.0'
+          - '5.0'
+          - '4.0'
+
     steps:
+      - name: Setup redis
+        uses: shogo82148/actions-setup-redis@v1
+        with:
+          redis-version: ${{ matrix.redis }}
+
       - name: Checkout
         uses: actions/checkout@v2
 
