feat: add DynamoDB log store implementation (#30)
* Move mock implementation to different package

* Add new package

* Fix grammatical error

* Add linter to CI

* Add log store implementation

* Add utils package

* Add DynamoDB lock option

* Change utils function name to be more specific

* Change utils function name to be more specific

* Remove method from interface

* Build out DynamoDB mock

* Solidify utils package

* Finish DynamoDB mock implementation

* Fix DynamoDB lock tests

* Complete DynamoDB log store tests

* Capitalize function name

* Capitalize function name

* Add getter for tablesToItems variable

* Simplify PR template

* Fix up comments

* Reword PR template

* Fix typo

* Fix up comments

* Fix CI workflow

* Add Dependabot update

* Fix grammatical error

* Add quotes for directory

* Fix typo

* Refactor folder structure

* Add new subfolders

* Fix up some comments

* Remove all mentions of 'external'

* Finish fixing up comments

* Fix some comments

* Finish fixing up the comments

---------

Co-authored-by: Rahul Madnawat <rahulmadnawat@rivian.com>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,19 +32,22 @@ jobs:
       - name: Unshallow
         run: git fetch --prune --unshallow
 
-      - name: Setup Go
+      - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.goVersion }}
           cache: true
 
-      - name: Set go env
+      - name: Set Go env
         run: |
           echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
           echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
       - name: Pull external libraries
         run: make vendor
+
+      - name: Run linter
+        run: make lint
 
       - name: Run tests
         run: make test
@@ -59,7 +62,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Go
+      - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: 1.21.x
