--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,10 @@
 version: 2
 updates:
   - package-ecosystem: gomod
-    directory: /
+    directory: "/"
+    schedule:
+      interval: daily
+  - package-ecosystem: GitHub-actions
+    directory: "/"
     schedule:
       interval: daily
