Specify version as 'latest'

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,10 +14,14 @@ jobs:
       fail-fast: false
       matrix:
         goVersion: [1.21.x]
+        redis:
+          - 'latest'
 
     steps:
       - name: Set up Redis
         uses: shogo82148/actions-setup-redis@v1
+        with:
+          redis-version: ${{ matrix.redis }}
 
       - name: Checkout
         uses: actions/checkout@v4
