Try latest version again

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,8 +15,7 @@ jobs:
       matrix:
         goVersion: [1.21.x]
         redis:
-          - 'latest'
-          - '6.x'
+          - "latest"
 
     steps:
       - name: Set up Redis
