--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,13 +13,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        goVersion: [1.21.x]
+        goVersion: [1.20.x]
         redis:
           - '6.x'
 
     steps:
       - name: Set up Redis
         uses: shogo82148/actions-setup-redis@v1
+        with:
+          redis-version: ${{ matrix.redis }}
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -60,7 +62,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.x
+          go-version: 1.20.x
 
           # No need to download cached dependencies when running gofmt.
           cache: false
