--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -49,8 +49,10 @@ jobs:
       - name: Run tests
         run: make test
 
-      - name: Publish test coverage
+      - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   fmt:
     runs-on: ubuntu-latest
