--- a/codecov.yml
+++ b/codecov.yml
@@ -1,10 +1,1 @@
-coverage:
-  status:
-    project:
-      default:
-        target: 70%
-        threshold: 1%
-    patch:
-      default:
-        target: 60%
-        threshold: 1%
+github_checks: false
