--- a/codecov.yml
+++ b/codecov.yml
@@ -1,1 +1,15 @@
-github_checks: false
+coverage:
+  status:
+    project:
+      default:
+        informational: true
+        target: auto
+        threshold: "0.5%"
+    patch:
+      default:
+        informational: true
+        target: auto
+        threshold: "0.5%"
+
+github_checks:
+    annotations: false
